add invis, health, hunger, gamemode flags-